# github-sync-fork

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py  test.py
